test/files/neg/t5353.check
t5353.scala:2: error: macro has not been expanded
  def f(x: Boolean) = if (x) Array("abc") else Array()
                                                    ^
one error found
